--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9eae87">  <td>23/12/06 10:03:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest2@158d2680]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309176095</td>   <td></td> </tr>
-<tr bgcolor="afa19b">  <td>23/12/06 10:03:26</td>   <td>-8180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:testCases.LoginTest@1d2adfbe]">loginTest</td> 
-  <td>main@1309176095</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>23/12/06 10:03:27</td>   <td>-7197</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest@1d2adfbe]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309176095</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>23/12/06 10:03:18</td>   <td>-16501</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp()[pri:0, instance:testCases.LoginTest@1d2adfbe]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309176095</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>23/12/06 10:03:28</td>   <td>-6911</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp()[pri:0, instance:testCases.LoginTest2@158d2680]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309176095</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>23/12/06 10:03:33</td>   <td>-2008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest2.loginTest()[pri:0, instance:testCases.LoginTest2@158d2680]">loginTest</td> 
-  <td>main@1309176095</td>   <td></td> </tr>
+<tr bgcolor="deb2b1">  <td>23/12/07 09:44:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest@74fe5c40]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@735229752</td>   <td></td> </tr>
+<tr bgcolor="deb2b1">  <td>23/12/07 09:44:00</td>   <td>-16887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@74fe5c40]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@735229752</td>   <td></td> </tr>
+<tr bgcolor="9e94bf">  <td>23/12/07 09:44:13</td>   <td>-3524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:testCases.LoginTest@74fe5c40]">loginTest</td> 
+  <td>TestNG-tests-1@735229752</td>   <td></td> </tr>
+<tr bgcolor="deb2b1">  <td>23/12/07 09:44:21</td>   <td>4316</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest@128d2484]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@766789989</td>   <td></td> </tr>
+<tr bgcolor="deb2b1">  <td>23/12/07 09:44:00</td>   <td>-16887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@128d2484]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@766789989</td>   <td></td> </tr>
+<tr bgcolor="9e94bf">  <td>23/12/07 09:44:18</td>   <td>1458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:testCases.LoginTest@128d2484]">loginTest</td> 
+  <td>TestNG-tests-2@766789989</td>   <td></td> </tr>
 </table>
