--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="deb2b1">  <td>23/12/07 09:44:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest@74fe5c40]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@735229752</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>23/12/07 09:44:00</td>   <td>-16887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@74fe5c40]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@735229752</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>23/12/07 09:44:13</td>   <td>-3524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:testCases.LoginTest@74fe5c40]">loginTest</td> 
-  <td>TestNG-tests-1@735229752</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>23/12/07 09:44:21</td>   <td>4316</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest@128d2484]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@766789989</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>23/12/07 09:44:00</td>   <td>-16887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@128d2484]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@766789989</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>23/12/07 09:44:18</td>   <td>1458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:testCases.LoginTest@128d2484]">loginTest</td> 
-  <td>TestNG-tests-2@766789989</td>   <td></td> </tr>
+<tr bgcolor="ce6090">  <td>23/12/11 09:10:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:testCases.LoginTest@131774fe]">loginTest</td> 
+  <td>main@169833205</td>   <td></td> </tr>
+<tr bgcolor="b0a0af">  <td>23/12/11 09:10:46</td>   <td>-5910</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@131774fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@169833205</td>   <td></td> </tr>
+<tr bgcolor="b0a0af">  <td>23/12/11 09:10:52</td>   <td>223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:testCases.LoginTest@131774fe]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@169833205</td>   <td></td> </tr>
 </table>
